--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0">
-    <title>Admin Panel</title>
+    <title>Electric Bikes</title>
   </head>
   <body>
     <div id="app"></div>
